<resources>

    <string name="app_name">Budget App</string>

    <!-- login labels -->
    <string name="label_name">Name:</string>
    <string name="label_email">Email address:</string>
    <string name="label_password">Password:</string>
    <string name="label_password_confirm">Retype password:</string>

    <!-- add transaction labels and stuff -->
    <string name="label_expense">Expense amount?</string>
    <string name="label_location">Location (Optional?)</string>
    <string name="label_payment_personal">Personal</string>
    <string name="label_payment_shared">Shared</string>
    <string name="label_transaction_none">None</string>
    <string name="label_transaction_monthly">Monthly</string>
    <string name="label_transaction_yearly">Yearly</string>
    <string name="label_additional_information">Additional information</string>

    <!-- show history labels -->
    <string name="label_payment">Payment</string>
    <string name="label_income">Income</string>

    <!-- Remember me checkbox -->
    <string name="remember_me_box">Remember me</string>

    <!-- button labels -->
    <string name="button_register">Register</string>
    <string name="button_login">Login</string>
    <string name="button_add_payment">Add Payment</string>
    <string name="button_add_income">Add Income</string>
    <string name="button_see_history">See Payment History</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_close">Close</string>
    <string name="button_save_new_payment_type">Save Type</string>
    <string name="button_leave_group">Leave Group</string>


    <!-- toolbar things -->
    <string name="toolbar_signout">Sign out</string>
    <string name="toolbar_help">Help</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_view_profile">View Profile</string>

    <!-- texts -->
    <string name="register_prompt">Do not have an account? Register now</string>
    <string name="divider_or">OR</string>
    <string name="register_link">Register</string>

    <!-- warnings -->
    <string name="warning_name_empty">Name cannot be empty</string>
    <string name="warning_name_lowercase">Name should start from an uppercase letter</string>
    <string name="warning_email_empty">Email cannot be empty</string>
    <string name="warning_email_invalid">Invalid email format</string>
    <string name="warning_password_empty">Password cannot be empty</string>
    <string name="warning_passwords_do_not_match">Passwords do not match</string>
    <string name="warning_field_empty">Field can\'t be empty</string>
    <string name="warning_number_negative">Number can\'t be negative</string>

    <!-- info messages -->
    <string name="info_registered_template">Registered. ObjectId: %s</string>
    <string name="info_registered_success">Registered %s successfully</string>
    <string name="info_logged_in">Logged in as %s</string>

    <!-- transaction statistic information -->
    <string name="stats_info_incomes">Total income:</string>
    <string name="stats_info_payments">Total expenses:</string>
    <string name="stats_info_net_income">Income - Payments:</string>
    <!--<string name="stats_info_debts">:</string>-->

    <!-- view profile -->
    <string name="view_profile_header">%s\'s profile</string>
    <string name="view_profile_groups_header">%s\'s group</string>
    <string name="view_profile_email">Email: %s</string>
    <string name="view_profile_created">Joined: %s</string>
    <string name="button_create_group">Create group</string>

    <!-- loading messages -->
    <string name="loading_empty">Loading…</string>
    <string name="loading_register">Sending registration request…</string>
    <string name="loading_login">Logging in…</string>
    <string name="loading_remove">Removing…</string>
    <string name="loading_user_groups">Loading user groups…</string>

    <!-- help messages -->
    <string name="help_main">This is help info for the main window.</string>
    <string name="help_login">Something something log in.</string>
    <string name="help_registration">Register a new account to the app.</string>
    <string name="help_settings">Configure your app.</string>
    <string name="help_add_transaction">
        Add a new transaction by filling out the form.
        You can choose between an income and payment by switching the tabs.
    </string>
    <string name="help_show_history">
        Here you can check out all the transactions from the past.\n
        \n
        You can filter the transactions so that it only shows\n
        - personal\n
        - shared\n
        - or all transactions\n
        \n
        You can move between months by swiping left and right. This app will show you payments from maximum of 13? months away.
    </string>
    <string name="help_show_statistics">nothing here yet</string>
    <string name="help_view_profile">View you profile and create new groups.</string>

    <!-- settings -->
    <string name="settings_prompt_exit">Prompt exit when closing app</string>

    <!-- activity names -->
    <string name="activity_registration">Registration</string>
    <string name="activity_login">Login</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_add_payment">Add Payment</string>
    <string name="activity_add_payment_type">Add Payment Type</string>
    <string name="activity_add_income">Add Income</string>
    <string name="activity_add_income_type">Add Income Type</string>
    <string name="activity_add_transaction">Add Transaction</string>
    <string name="activity_add_transaction_type">Add Transaction Type</string>

    <string name="activity_show_history">Show Transaction history</string>
    <string name="title_activity_view_transaction">View Transaction</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_transaction">AddTransaction</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_show_statistics">Show Statistics</string>
    <string name="title_view_profile">View Profile</string>
    <string name="title_create_group">Create Group</string>
    <string name="title_view_group">View Group</string>
    <string name="view_profile_not_in_group">User not in a group. Click below to create a new group</string>
    <string name="view_user_group_add_members">Add more members</string>
    <string name="searching">Searching</string>
    <string name="help_manage_repetitive_transactions">some help</string>
    <string name="title_manage_repetitive_transactions">Manage Repetitive Transactions</string>


</resources>
