<?xml version="1.0" encoding="utf-8"?>
<!-- This xml contains all the items that are in the base toolbar, meaning items here will be shown in every activity unless hidden -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_icon"
        android:title="@string/toolbar_help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_view_profile"
        android:orderInCategory="98"
        android:title="@string/toolbar_view_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/toolbar_settings"
        app:showAsAction="never" />

     <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/toolbar_signout"
        app:showAsAction="never" />
</menu>