<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_income_root_relative_layout"
        android:layout_margin="@dimen/activity_vertical_margin">


        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginBottom="@dimen/view_vertical_margin"
            android:layout_marginTop="?attr/actionBarSize"
            android:id="@+id/add_income_grid_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_expense"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/add_income_expense_field" />
        </GridLayout>

        <!-- Empty layout (0x0 dp) centered horizontally -->
        <Space android:id="@+id/add_income_view_dummy"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/label_payment_personal"
            android:textOff="@string/label_payment_personal"
            android:id="@+id/add_income_toggle_personal"
            android:layout_below="@+id/add_income_grid_layout"
            android:layout_toLeftOf="@+id/add_income_view_dummy"
            android:background="@color/colorWhite"
            android:foreground="@drawable/payment_type_selector"
            android:onClick="setPersonal" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/label_payment_shared"
            android:textOff="@string/label_payment_shared"
            android:id="@+id/add_income_toggle_shared"
            android:layout_toRightOf="@id/add_income_view_dummy"
            android:layout_below="@+id/add_income_grid_layout"
            android:background="@color/colorWhite"
            android:foreground="@drawable/payment_type_selector"
            android:onClick="setShared" />

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_income_type_picker_grid_layout"
            android:layout_below="@id/add_income_toggle_personal"
            android:layout_centerHorizontal="true"
            android:columnWidth="@dimen/payment_type_picker_square_size"
            android:numColumns="auto_fit"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:listSelector="#00000000"
            android:isScrollContainer="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_payment"
            android:id="@+id/button_save_income"
            android:onClick="saveIncome"
            android:layout_below="@+id/add_income_type_picker_grid_layout"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</RelativeLayout>